--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Produtos</title>
-    <link rel="stylesheet" href="Styles.css">        
+    <link rel="stylesheet" href="style.css">        
 </head>
 <body>
     <h1>Produtos</h1>
