--- a/produto1.html
+++ b/produto1.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1>Detalhes do Produto 1</h1>
-    <p>Descrição, informações, etc.</p>
+    <p>Bone preto liso</p><br>
+    <p>R$40,00</p>
+    <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg alt="produto 1">
     <a href="index.html">Voltar para a lista de produtos</a>
 </body>
 </html>
