--- a/produto2.html
+++ b/produto2.html
@@ -5,8 +5,10 @@
     <title>Produto 2</title>
 </head>
 <body>
-    <h1>Detalhes do Produto 2</h1>
-    <p>Descrição, informações, etc.</p>
+    <h1>Bone branco liso</h1>
+    <p> Bone branco lindo de bunito</p><br>
+    <p>R$40,00</p>
+    <img src="https://acdn.mitiendanube.com/stores/001/054/338/products/htb1ynenfeysbunjy1zdq6xpxfxap1-29a2e57ef25a1fa47515713597154525-640-0.jpg" alt="produto 2">
     <a href="index.html">Voltar para a lista de produtos</a>
 </body>
 </html>
