--- a/produto1.html
+++ b/produto1.html
@@ -5,8 +5,8 @@
     <title>Produto 1</title>
 </head>
 <body>
-    <h1>Detalhes do Produto 1</h1>
-    <p>Bone preto liso</p><br>
+    <h1>Bone preto liso</h1>
+    <p>Bone preto lindo de bunito</p><br>
     <p>R$40,00</p>
     <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg alt="produto 1">
     <a href="index.html">Voltar para a lista de produtos</a>
