--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Produtos</title>       
+    <title>Produtos</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <h1>Produtos</h1>
