--- a/produto1.html
+++ b/produto1.html
@@ -8,7 +8,7 @@
     <h1>Bone preto liso</h1>
     <p>Bone preto lindo de bunito</p><br>
     <p>R$40,00</p>
-    <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg alt="produto 1">
+    <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg" alt="produto1">
     <a href="index.html">Voltar para a lista de produtos</a>
 </body>
 </html>
