--- a/produto1.html
+++ b/produto1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Bone preto liso</h1>
-    <p>Bone preto lindo de bunito</p><br>
+    <p>Bone preto lindo de bunito liso super leve protege de raios uva uvab uvc ataque nuclear e ataque quimico com blueetooth e wifi wireless gamer com rtx 30-90 motor v8 bi turbo 7 marchas furtivo eletrico a combustão hidrofobico radical com ia propria.</p><br>
     <p>R$40,00</p>
     <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg" alt="produto1">
     <a href="index.html">Voltar para a lista de produtos</a>
