--- a/produto2.html
+++ b/produto2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Bone branco liso</h1>
-    <p> Bone branco lindo de bunito</p><br>
+    <p> Bone branco lindo de bunito acquatico terrestre e voador com turbinha 5.0 refrigerador e amigo do povo não fez o L branco brilhante ilumina o escuro e mostra o caminho da paz e da verdade te protejendo do perigos noturnos com luneta telescópica imbutida e café on board express japõnes de alto redimento airfrye anti frizz saloon line indicado com 9 a cada 10 dentistas feiot de pele de cordeiro virgem</p><br>
     <p>R$40,00</p>
     <img src="https://acdn.mitiendanube.com/stores/001/054/338/products/htb1ynenfeysbunjy1zdq6xpxfxap1-29a2e57ef25a1fa47515713597154525-640-0.jpg" alt="produto2">
     <a href="index.html">Voltar para a lista de produtos</a>
