--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Produtos</h1>
     <ul>
         <img src="https://m.media-amazon.com/images/I/41U7n6-jm2S._AC_SX679_.jpg" alt="produto1">
-        <li><button onclick="location.href='produto1.html'">Boneu pretin</button>button></li>
+        <li><button onclick="location.href='produto1.html'">Boneu pretin</button></li>
         <img src="https://acdn.mitiendanube.com/stores/001/054/338/products/htb1ynenfeysbunjy1zdq6xpxfxap1-29a2e57ef25a1fa47515713597154525-640-0.jpg" alt="produto2">
-        <li><a href="produto2.html">boneu branquin</a></li>
+        <li><button onclick="location.href='produto2.html'">Boneu branquin</button></li>
     </ul>
 </body>
 </html>
