--- a/produto1.html
+++ b/produto1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Produto 1</title>
+     <link rel="stylesheet" href="prod1.css">
 </head>
 <body>
     <h1>Bone preto liso</h1>
