--- a/produto2.html
+++ b/produto2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Produto 2</title>
+     <link rel="stylesheet" href="prod2.css">
 </head>
 <body>
     <h1>Bone branco liso</h1>
